@@ -2,35 +2,29 @@ package com.education.service.appeal.impl;
 
 import com.education.controller.facsimile.FacsimileController;
 import com.education.feign.AppealFeignClient;
+import com.education.feign.AppealFeignClientToIntegrationEdo;
 import com.education.feign.ResolutionFeignClient;
 import com.education.service.appeal.AppealService;
 import com.education.service.author.AuthorService;
+import com.education.service.common.AbstractService;
 import com.education.service.facsimile.FacsimileService;
 import com.education.service.filePool.FilePoolService;
 import com.education.service.minio.MinioService;
 import com.education.service.nomenclature.NomenclatureService;
 import com.education.service.question.QuestionService;
-import com.education.util.URIBuilderUtil;
 import com.education.util.Validator;
+import jakarta.ws.rs.NotFoundException;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import model.dto.*;
 import org.springframework.core.io.Resource;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
 import org.springframework.util.LinkedMultiValueMap;
-import org.springframework.web.client.RestTemplate;
+import org.springframework.util.MultiValueMap;
 
 import java.io.IOException;
 import java.time.ZonedDateTime;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.*;
 
 import static com.education.util.URIBuilderUtil.buildURI;
 import static model.constant.Constant.*;
@@ -43,9 +37,10 @@ import static org.springframework.http.MediaType.APPLICATION_PDF_VALUE;
 @Service
 @AllArgsConstructor
 @Slf4j
-public class AppealServiceImpl implements AppealService {
+public class AppealServiceImpl extends AbstractService<AppealDto> implements AppealService {
 
-    private final RestTemplate restTemplate;
+    private final AppealFeignClient appealFeignClient;
+    private final AppealFeignClientToIntegrationEdo massageFeignClient;
     private final AuthorService authorService;
     private final QuestionService questionService;
     private final FilePoolService filePoolService;
@@ -54,26 +49,7 @@ public class AppealServiceImpl implements AppealService {
     private final MinioService minioService;
     private final NomenclatureService nomenclatureService;
     private final ResolutionFeignClient resolutionFeignClient;
-    private final AppealFeignClient appealFeignClient;
 
-
-    /**
-     * Нахождение обращения по id
-     */
-    @Override
-    public AppealDto findById(Long id) {
-        var builder = buildURI(EDO_REPOSITORY_NAME, APPEAL_URL + "/" + id);
-        return restTemplate.getForObject(builder.toString(), AppealDto.class);
-    }
-
-    /**
-     * Нахождение всех обращений
-     */
-    @Override
-    public Collection<AppealDto> findAll() {
-        var builder = buildURI(EDO_REPOSITORY_NAME, APPEAL_URL);
-        return restTemplate.getForObject(builder.toString(), Collection.class);
-    }
 
     /**
      * Метод сохраняет или изменяет AppealDto передаваемый в параметре
@@ -81,50 +57,49 @@ public class AppealServiceImpl implements AppealService {
      * обращения и всех его вопросов на "UPDATED". После всего этого передаёт appeal в контроллер edo-repository
      *
      * @param appealDto - DTO который нужно сохранить или изменить
-     * @return AppealDto - DTO который сохранили или изменили
+     * @return - DTO который сохранили или изменили
      */
     @Override
     public AppealDto save(AppealDto appealDto) {
+
         // Вызываем валидацию перед сохранением обращения
         Validator.getValidateAppeal(appealDto);
+
         // Назначение статуса и времени создания
         setNewAppealStatusAndCreationDate(appealDto);
+
         // Генерация и назначения number Appeal'у
         nomenclatureService.generateAppealNumber(appealDto);
+
         // Сохранение или редактирование новых сущностей Appeal'a
         try {
-            if (appealDto.getAuthors() == null) {
+            if (appealDto.getAuthors() != null) {
                 appealDto.setAuthors(authorService.saveAll(appealDto.getAuthors()));
             }
-            if (appealDto.getQuestions() == null) {
+            if (appealDto.getQuestions() != null) {
                 appealDto.setQuestions(questionService.saveAll(appealDto.getQuestions()));
             }
-            if (appealDto.getFile() == null) {
+            if (appealDto.getFile() != null) {
                 appealDto.setFile(filePoolService.saveAll(appealDto.getFile()));
             }
-            // Отправление пост запроса в репозиторий
-            HttpHeaders headers = new HttpHeaders();
-            headers.setContentType(MediaType.APPLICATION_JSON);
-            String uri = URIBuilderUtil.buildURI(EDO_REPOSITORY_NAME, "api/repository/appeal").toString();
-            return restTemplate.exchange(uri, HttpMethod.POST, new HttpEntity<>(appealDto, headers), AppealDto.class).getBody();
+
+            return appealFeignClient.save(appealDto);
         } catch (Exception e) {
             // Удаление сохранённых вложенных сущностей если возникла ошибка
-            appealDto.getAuthors().stream().filter(authorDto -> authorDto.getId() != null).forEach(authorDto -> authorService.delete(authorDto.getId()));
-            appealDto.getQuestions().stream().filter(questionDto -> questionDto.getId() != null).forEach(filePoolDto -> filePoolService.delete(filePoolDto.getId()));
-            appealDto.getFile().stream().filter(filePoolDto -> filePoolDto.getId() != null).forEach(questionDto -> questionService.delete(questionDto.getId()));
+            if (appealDto.getAuthors() != null) {
+                appealDto.getAuthors().stream().filter(authorDto -> authorDto.getId() != null)
+                        .forEach(authorDto -> authorService.delete(authorDto.getId()));
+            }
+            if (appealDto.getQuestions() != null) {
+                appealDto.getQuestions().stream().filter(questionDto -> questionDto.getId() != null)
+                        .forEach(filePoolDto -> filePoolService.delete(filePoolDto.getId()));
+            }
+            if (appealDto.getFile() != null) {
+                appealDto.getFile().stream().filter(filePoolDto -> filePoolDto.getId() != null)
+                        .forEach(questionDto -> questionService.delete(questionDto.getId()));
+            }
             throw e;
         }
-    }
-
-    /**
-     * Удаления обращения по Id
-     */
-    @Override
-    public void delete(Long id) {
-        var builder = buildURI(EDO_REPOSITORY_NAME, APPEAL_URL)
-                .setPath("/")
-                .setPath(String.valueOf(id));
-        restTemplate.delete(builder.toString());
     }
 
     /**
@@ -133,11 +108,11 @@ public class AppealServiceImpl implements AppealService {
     @Override
     public void moveToArchive(Long id) {
         AppealDto appeal = findById(id);
+        if (appeal == null) {
+            throw new NotFoundException("Appeal with ID " + id + " not found");
+        }
         appeal.setArchivedDate(ZonedDateTime.now());
-        var builder = buildURI(EDO_REPOSITORY_NAME, APPEAL_URL)
-                .setPath("/move/")
-                .setPath(String.valueOf(id));
-        restTemplate.put(builder.toString(), appeal);
+        appealFeignClient.moveToArchive(id);
     }
 
     /**
@@ -145,10 +120,11 @@ public class AppealServiceImpl implements AppealService {
      */
     @Override
     public AppealDto findByIdNotArchived(Long id) {
-        var builder = buildURI(EDO_REPOSITORY_NAME, APPEAL_URL)
-                .setPath("/findByIdNotArchived/")
-                .setPath(String.valueOf(id));
-        return restTemplate.getForObject(builder.toString(), AppealDto.class);
+        AppealDto appeal = appealFeignClient.findByIdNotArchived(id);
+        if (appeal == null || appeal.getAppealsStatus() == ARCHIVE) {
+            throw new NotFoundException("Appeal with ID " + id + " not found or already archived");
+        }
+        return appeal;
     }
 
     /**
@@ -156,9 +132,13 @@ public class AppealServiceImpl implements AppealService {
      */
     @Override
     public Collection<AppealDto> findAllNotArchived() {
-        var builder = buildURI(EDO_REPOSITORY_NAME, APPEAL_URL)
-                .setPath("/findByIdNotArchived");
-        return restTemplate.getForObject(builder.toString(), Collection.class);
+        try {
+            return appealFeignClient.findAllNotArchived();
+        } catch (Exception e) {
+            log.error("Unexpected error fetching not archived appeals: " + e.getMessage());
+            return Collections.emptyList();
+        }
+
     }
 
     /**
@@ -167,25 +147,25 @@ public class AppealServiceImpl implements AppealService {
      */
     @Override
     public void sendMessage(AppealDto appealDto) {
-        var builder = buildURI(EDO_INTEGRATION_NAME, MESSAGE_URL);
-        var valueMapForSendingObjects = new LinkedMultiValueMap<>();
+        try {
+            //Сбор всех emails для отправки
+            List<String> emails = new ArrayList<>();
+            emails.addAll(getEmployeesEmails(appealDto.getAddressee()));
+            emails.addAll(getEmployeesEmails(appealDto.getSigner()));
 
-        //Сбор всех emails для отправки
-        List<String> emails = new ArrayList<>();
-        emails.addAll(getEmployeesEmails(appealDto.getAddressee()));
-        emails.addAll(getEmployeesEmails(appealDto.getSigner()));
+            //Получение URL
+            var builderForAppealUrl = buildURI(EDO_REST_NAME, APPEAL_REST_URL + "/" + appealDto.getId());
 
-        //Получение URL
-        var builderForAppealUrl = buildURI(EDO_REST_NAME, APPEAL_REST_URL + "/" + appealDto.getId());
+            //Заполнение мапы данными
+            MultiValueMap<String, Object> valueMapForSendingObjects = new LinkedMultiValueMap<>();
+            valueMapForSendingObjects.add("appealURL", builderForAppealUrl.toString());
+            valueMapForSendingObjects.addAll("emails", emails);
+            valueMapForSendingObjects.add("appealNumber", appealDto.getNumber());
 
-        //Заполнение мапы данными
-        valueMapForSendingObjects.add("appealURL", builderForAppealUrl.toString());
-        valueMapForSendingObjects.addAll("emails", emails);
-        valueMapForSendingObjects.add("appealNumber", appealDto.getNumber());
-        HttpHeaders headers = new HttpHeaders();
-        var requestEntity = new HttpEntity<>(valueMapForSendingObjects, headers);
-
-        restTemplate.postForEntity(builder.toString(), requestEntity, Object.class);
+            massageFeignClient.sendMessage(valueMapForSendingObjects.toSingleValueMap());
+        } catch (Exception e) {
+            log.error("Failed to send message", e);
+        }
     }
 
     /**
@@ -193,21 +173,22 @@ public class AppealServiceImpl implements AppealService {
      */
     @Override
     public AppealDto findAppealByQuestionsId(Long id) {
-        String URL = URIBuilderUtil.buildURI(EDO_REPOSITORY_NAME, "api/repository/appeal/findAppealByQuestionsId/" + id).toString();
-        return restTemplate.getForObject(URL, AppealDto.class);
+        return appealFeignClient.findAppealByQuestionsId(id);
     }
 
     /**
-     * Метод закрепляет файл за обращением
-     * Накладывает факсимиле на файл за обращения
+     * Метод закрепляет файл за обращением.
+     * Накладывает факсимиле на файл обращения
      */
     @Override
     public AppealDto upload(Long id, FilePoolDto file) {
         AppealDto appealDto = findById(id);
         var employeeId = appealDto.getSigner().iterator().next().getId();
-        Resource facsimileRes = facsimileService.getFacsimile(facsimileController.findFacsimileByEmployeeId(employeeId).getBody());
+        Resource facsimileRes = facsimileService.getFacsimile(
+                facsimileController.findFacsimileByEmployeeId(employeeId).getBody());
         try (var facsimileFile = facsimileRes.getInputStream()) {
-            minioService.overlayFacsimileOnFirstFile(file.getStorageFileId(), file.getExtension(), APPLICATION_PDF_VALUE, facsimileFile);
+            minioService.overlayFacsimileOnFirstFile(file.getStorageFileId(), file.getExtension(),
+                    APPLICATION_PDF_VALUE, facsimileFile);
         } catch (IOException e) {
             log.error("Факсимиле не было наложено на файл");
         }
@@ -233,24 +214,19 @@ public class AppealServiceImpl implements AppealService {
         var appealQuestions = questionService.findByAppealId(id);
         var questionsIds = appealQuestions.stream()
                 .map(QuestionDto::getId)
-                .collect(Collectors.toList());
+                .toList();
         questionService.registerAllQuestions(questionsIds);
-        var uri = URIBuilderUtil.buildURI(EDO_REPOSITORY_NAME, "/api/repository/appeal/register");
-        uri.setParameter("id", String.valueOf(id));
-        return restTemplate.postForObject(uri.toString(), new HttpEntity<>(new HttpHeaders()), AppealDto.class);
+        return appealFeignClient.register(id);
     }
 
-    /**
+    /**w
      * Метод достает emails из коллекции EmployeeDto
      */
     private Collection<String> getEmployeesEmails(Collection<EmployeeDto> employees) {
-        return employees.stream().filter(Objects::nonNull)
-                .map(emp -> {
-                    var builderEmployee = buildURI(EDO_REPOSITORY_NAME, EMPLOYEE_URL + "/" + emp.getId());
-                    var employeeDto = restTemplate.getForObject(builderEmployee.toString(), EmployeeDto.class);
-                    return employeeDto.getEmail();
-                })
-                .collect(Collectors.toList());
+        return employees.stream()
+                .filter(Objects::nonNull)
+                .map(EmployeeDto::getEmail)
+                .toList();
     }
 
     /**
@@ -288,10 +264,20 @@ public class AppealServiceImpl implements AppealService {
      */
     @Override
     public void setNewAppealStatusIfResolutionLastAndIsDraftFalse(AppealDto appealDto) {
-        Collection<ResolutionDto> resolutions = resolutionFeignClient.findAllByAppealIdAndIsDraftFalse(appealDto.getId());
+        Collection<ResolutionDto> resolutions = resolutionFeignClient.findAllByAppealIdAndIsDraftFalse(
+                appealDto.getId());
         if (resolutions.size() == 1) {
             appealDto.setAppealsStatus(UNDER_CONSIDERATION);
         }
+    }
+
+    /**
+     * Если все резолюции обращения выполнены, то статус обращения меняется на PERFORMED
+     */
+
+    @Override
+    public void updateAppealStatusWhereExecutionStatusIsPerformed(Long resolutionId) {
+        appealFeignClient.updateAppealStatusWhereExecutionStatusIsPerformed(resolutionId);
     }
 
     /**
